# sickle

./: .gitignore  CMakeLists.txt  LICENSE  MaterialIcons-Regular.codepoints.txt  README.md  font.h  iconset.h  log.h  program.cpp  program.h  shader.h
mapdata/: hl1mapinstance.cpp  hl1mapinstance.h  hl1mapshader.cpp  hl1mapshader.h  hl1shader.cpp  hl1shader.h  hl1types.cpp  hl1types.h  hl1worldsize.h  mapdocument-tests.cpp  mapdocument.cpp  mapdocument.h  maploader.cpp  maploader.h  texture.cpp  texture.h  texturepack.cpp  texturepack.h  tokenizer.cpp  tokenizer.h
